site da afro bier

--- a/index.html
+++ b/index.html
@@ -1,8 +1,54 @@
 <!DOCTYPE html>
-<html>
-<head> "uma cabeça de abacate"das  teste
-    
-    </head> so o teste dos testes
+<html lang="pt-br">
+<head>
+    <meta charset="utf-8">
 
-<body> <header>meu primeiro site site</header></body>
+    <header>
+        <h1><b><i>CERVEJARIA AFRO BIER</i></b></h1>
+    <p><b><a>Primeira cervejaria de goiana-PE</a></b></p>
+    </header>
+    <nav><p>Menu</p>
+        <ul>
+            <li>>Home</li>
+            <li><a href="#Cervejas">Cervejas</a></li>
+            <li>Estilos</li>
+            <li>Escola cervejeira</li>
+            <li>parceiros</li>
+            <li>Historia</li>
+            <li><a href="#contato">contato</a></li>
+
+
+
+        </ul>
+    </nav>
+<section id="cervejas">
+    <h2>Cervejas</h2>
+    <p>temos as melhores cervejas do mundo</p>
+    <img src="imagens/pexels-photo-1267700.jpeg" width="500">
+</section>
+
+<section id="contato">
+    <h1>Contatos</h1>
+    <p>(81) 9 96749556</p>
+    <img src="imagens/pexels-photo-2076748.jpeg" width="500">
+    </section>
+    <footer>feito por Juan</footer>
+</body>
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </html>
